# ExMateria-ISO-Patcher

./: README.md  fft-iso-patcher.spec  pyproject.toml
.github/workflows/: build.yml  release.yml
fft_iso_patcher/: __init__.py  __main__.py  asset_dirs.py  cli.py  constants.py  extract.py  free_space.py  free_space_survey.py  iso9660.py  iso_sectors.py  iso_utils.py  manifest.py  patcher.py  recipe.py  recipe_build.py
fft_iso_patcher/assets/: __init__.py  byte_patch.py  kinds.py  music.py
fft_iso_patcher/tui/: __init__.py  app.py  paths.py  state.py
fft_iso_patcher/tui/screens/: __init__.py  apply.py  load.py  review.py  slots.py
scripts/: install_exmateria.ps1  install_exmateria_from_source.ps1  survey_free_space.py
tests/: _assets.py  test_alloc_exhaustion.py  test_apply_noop.py  test_conflicts.py  test_ecc.py  test_in_place_replace.py  test_music_relocate.py  test_music_relocate_table_patch.py  test_music_table.py
tests/recipes/: empty.toml
